cmake_minimum_required(VERSION 3.29)
project(untitled)

set(CMAKE_CXX_STANDARD 17)
set(gtest_SRC_DIR test/googletest-1.15.2)

# 파일 이름 변경 위치
set(PROBLEM_FILE_NAME "barkingdog/[0x12]Math/241104-2839")
add_definitions(-DPROBLEM_FILE_NAME="${PROBLEM_FILE_NAME}")

add_subdirectory(${gtest_SRC_DIR})

include_directories(${gtest_SRC_DIR}/googletest/include)

add_library(algorithm SHARED ${PROBLEM_FILE_NAME}.cpp algorithm-frame.h)
 
add_executable(runTests test/algorithm-test.cpp)
target_link_libraries(runTests gtest gtest_main)
target_link_libraries(runTests algorithm)

add_executable(241001-15665 "Baekjoon/241001-15665.cpp")
add_executable(241001-15666 "Baekjoon/241001-15666.cpp")
add_executable(241003-2493 "barkingdog/[0x05]stack/241003-2493.cpp")
add_executable(241003-3015 "barkingdog/[0x05]stack/241003-3015.cpp")
add_executable(241007-6549 "barkingdog/[0x05]stack/241007-6549.cpp")
add_executable(241009-5430 barkingdog/[0x07]dequeue/241009-5430.cpp)
add_executable(241009-11003 barkingdog/[0x07]dequeue/241009-11003.cpp)
add_executable(241009-14442 barkingdog/[0x09]BFS/241009-14442.cpp)
add_executable(241009-16933 barkingdog/[0x09]BFS/241009-16933.cpp)
add_executable(241010-16920 barkingdog/[0x09]BFS/241010-16920.cpp)
add_executable(241010-11967 barkingdog/[0x09]BFS/241010-11967.cpp)
add_executable(241011-17071 barkingdog/[0x09]BFS/241011-17071.cpp)
add_executable(241011-9328 barkingdog/[0x09]BFS/241011-9328.cpp)
add_executable(241011-3197 barkingdog/[0x09]BFS/241011-3197.cpp)
add_executable(241011-20304 barkingdog/[0x09]BFS/241011-20304.cpp)
add_executable(241012-11729 barkingdog/[0x0B]recursion/241012-11729.cpp)
add_executable(241014-1074 barkingdog/[0x0B]recursion/241014-1074.cpp)
add_executable(241014-9663 barkingdog/[0x0C]backTracking/241014-9663.cpp)
add_executable(241015-1941 barkingdog/[0x0C]backTracking/241015-1941.cpp)
add_executable(241015-16987 barkingdog/[0x0C]backTracking/241015-16987.cpp)
add_executable(241017-18809 barkingdog/[0x0C]backTracking/241017-18809.cpp)
add_executable(241017-1799 barkingdog/[0x0C]backTracking/241017-1799.cpp)
add_executable(241017-1463 barkingdog/[0x10]dynamicProgramming/241017-1463.cpp)
add_executable(241017-9095 barkingdog/[0x10]dynamicProgramming/241017-9095.cpp)
add_executable(241017-2579 barkingdog/[0x10]dynamicProgramming/241017-2579.cpp)
add_executable(241017-1149 barkingdog/[0x10]dynamicProgramming/241017-1149.cpp)
add_executable(241017-11726 barkingdog/[0x10]dynamicProgramming/241017-11726.cpp)
add_executable(241017-11659 barkingdog/[0x10]dynamicProgramming/241017-11659.cpp)
add_executable(241018-12852 barkingdog/[0x10]dynamicProgramming/241018-12852.cpp)
add_executable(241018-11727 barkingdog/[0x10]dynamicProgramming/241018-11727.cpp)
add_executable(241018-2193 barkingdog/[0x10]dynamicProgramming/241018-2193.cpp)
add_executable(241019-1912 barkingdog/[0x10]dynamicProgramming/241019-1912.cpp)
add_executable(241021-11055 barkingdog/[0x10]dynamicProgramming/241021-11055.cpp)
add_executable(241021-11053 barkingdog/[0x10]dynamicProgramming/241021-11053.cpp)
add_executable(241021-9461 barkingdog/[0x10]dynamicProgramming/241021-9461.cpp)
add_executable(241021-14501 barkingdog/[0x10]dynamicProgramming/241021-14501.cpp)
add_executable(241022-15486 barkingdog/[0x10]dynamicProgramming/241022-15486.cpp)
add_executable(241022-10844 barkingdog/[0x10]dynamicProgramming/241022-10844.cpp)
add_executable(241022-2240 barkingdog/[0x10]dynamicProgramming/241022-2240.cpp)
add_executable(241022-14002 barkingdog/[0x10]dynamicProgramming/241022-14002.cpp)
add_executable(241022-2156 barkingdog/[0x10]dynamicProgramming/241022-2156.cpp)
add_executable(241022-2482 barkingdog/[0x10]dynamicProgramming/241022-2482.cpp)
add_executable(241022-15988 barkingdog/[0x10]dynamicProgramming/241022-15988.cpp)
add_executable(241023-2302 barkingdog/[0x10]dynamicProgramming/241023-2302.cpp)
add_executable(241023-11052 barkingdog/[0x10]dynamicProgramming/241023-11052.cpp)
add_executable(241023-9465 barkingdog/[0x10]dynamicProgramming/241023-9465.cpp)
add_executable(241023-11057 barkingdog/[0x10]dynamicProgramming/241023-11057.cpp)
add_executable(241023-2293 barkingdog/[0x10]dynamicProgramming/241023-2293.cpp)
add_executable(241025-1904 barkingdog/[0x10]dynamicProgramming/241025-1904.cpp)
add_executable(241025-1788 barkingdog/[0x10]dynamicProgramming/241025-1788.cpp)
add_executable(241025-4883 barkingdog/[0x10]dynamicProgramming/241025-4883.cpp)
add_executable(241025-9251 barkingdog/[0x10]dynamicProgramming/241025-9251.cpp)
add_executable(custom custom.cpp)
add_executable(241027-1699 barkingdog/[0x10]dynamicProgramming/241027-1699.cpp)
add_executable(241028-9084 barkingdog/[0x10]dynamicProgramming/241028-9084.cpp)
add_executable(241029-1915 barkingdog/[0x10]dynamicProgramming/241029-1915.cpp)
add_executable(241029-10942 barkingdog/[0x10]dynamicProgramming/241029-10942.cpp)
add_executable(241030-9655 barkingdog/[0x10]dynamicProgramming/241030-9655.cpp)
add_executable(241030-2011 barkingdog/[0x10]dynamicProgramming/241030-2011.cpp)
add_executable(241030-2294 barkingdog/[0x10]dynamicProgramming/241030-2294.cpp)
add_executable(241030-1520 barkingdog/[0x10]dynamicProgramming/241030-1520.cpp)
add_executable(241030-11047 barkingdog/[0x11]Greedy/241030-11047.cpp)
add_executable(241030-1931 barkingdog/[0x11]Greedy/241030-1931.cpp)
add_executable(241030-2217 barkingdog/[0x11]Greedy/241030-2217.cpp)
add_executable(241031-2457 barkingdog/[0x11]Greedy/241031-2457.cpp)
add_executable(241031-1541 barkingdog/[0x11]Greedy/241031-1541.cpp)
add_executable(241031-11501 barkingdog/[0x11]Greedy/241031-11501.cpp)
add_executable(241031-11501v2 barkingdog/[0x11]Greedy/241031-11501v2.cpp)
add_executable(241031-1744 barkingdog/[0x11]Greedy/241031-1744.cpp)
add_executable(241031-1439 barkingdog/[0x11]Greedy/241031-1439.cpp)
add_executable(241031-11000 barkingdog/[0x11]Greedy/241031-11000.cpp)
add_executable(241031-15903 barkingdog/[0x11]Greedy/241031-15903.cpp)
add_executable(241031-2170 barkingdog/[0x11]Greedy/241031-2170.cpp)
add_executable(241031-1700 barkingdog/[0x11]Greedy/241031-1700.cpp)
add_executable(241101-8980 barkingdog/[0x11]Greedy/241101-8980.cpp)
add_executable(241102-7570 barkingdog/[0x11]Greedy/241102-7570.cpp)
add_executable(241102-1978 barkingdog/[0x12]Math/241102-1978.cpp)
add_executable(241102-11653 barkingdog/[0x12]Math/241102-11653.cpp)
add_executable(241102-6064 barkingdog/[0x12]Math/241102-6064.cpp)
add_executable(241103-11050 barkingdog/[0x12]Math/241103-11050.cpp)
add_executable(241104-11051 barkingdog/[0x12]Math/241104-11051.cpp)
add_executable(241104-15894 barkingdog/[0x12]Math/241104-15894.cpp)
add_executable(241104-4796 barkingdog/[0x12]Math/241104-4796.cpp)
add_executable(241104-2960 barkingdog/[0x12]Math/241104-2960.cpp)
add_executable(241104-1193 barkingdog/[0x12]Math/241104-1193.cpp)
add_executable(241104-4948 barkingdog/[0x12]Math/241104-4948.cpp)
add_executable(241104-1676 barkingdog/[0x12]Math/241104-1676.cpp)
add_executable(241104-9613 barkingdog/[0x12]Math/241104-9613.cpp)
add_executable(241104-2292 barkingdog/[0x12]Math/241104-2292.cpp)
add_executable(241104-2869 barkingdog/[0x12]Math/241104-2869.cpp)
add_executable(241104-10610 barkingdog/[0x12]Math/241104-10610.cpp)
add_executable(241104-6359 barkingdog/[0x12]Math/241104-6359.cpp)
add_executable(241104-10250 barkingdog/[0x12]Math/241104-10250.cpp)
add_executable(241104-1456 barkingdog/[0x12]Math/241104-1456.cpp)
add_executable(241104-2839 barkingdog/[0x12]Math/241104-2839.cpp)
add_executable(241104-17103 barkingdog/[0x12]Math/241104-17103.cpp)
add_executable(241104-2312 barkingdog/[0x12]Math/241104-2312.cpp)
add_executable(241104-9020 barkingdog/[0x12]Math/241104-9020.cpp)
add_executable(241104-5347 barkingdog/[0x12]Math/241104-5347.cpp)
add_executable(241104-1476 barkingdog/[0x12]Math/241104-1476.cpp)
add_executable(241104-1011 barkingdog/[0x12]Math/241104-1011.cpp)
add_executable(241104-1038 barkingdog/[0x12]Math/241104-1038.cpp)
add_executable(241104-1057 barkingdog/[0x12]Math/241104-1057.cpp)
add_executable(241104-2004 barkingdog/[0x12]Math/241104-2004.cpp)
add_executable(241106-1292 barkingdog/[0x12]Math/241106-1292.cpp)
add_executable(241106-1790 barkingdog/[0x12]Math/241106-1790.cpp)
add_executable(241106-1735 barkingdog/[0x12]Math/241106-1735.cpp)
add_executable(241106-3343 barkingdog/[0x12]Math/241106-3343.cpp)
add_executable(241106-1963 barkingdog/[0x12]Math/241106-1963.cpp)
add_executable(241106-1747 barkingdog/[0x12]Math/241106-1747.cpp)
add_executable(241108-1256 barkingdog/[0x12]Math/241108-1256.cpp)
add_executable(241108-2089 barkingdog/[0x12]Math/241108-2089.cpp)
add_executable(241108-1019 barkingdog/[0x12]Math/241108-1019.cpp)
add_executable(241110-1920 barkingdog/[0x12]Math/241110-1920.cpp)
add_executable(241111-10816 barkingdog/[0x12]Math/241111-10816.cpp)
add_executable(241112-18870 barkingdog/[0x12]Math/241112-18870.cpp)
add_executable(241112-2295 barkingdog/[0x12]Math/241112-2295.cpp)
add_executable(241112-1654 barkingdog/[0x12]Math/241112-1654.cpp)
add_executable(241112-10815 barkingdog/[0x12]Math/241112-10815.cpp)
add_executable(241112-1822 barkingdog/[0x12]Math/241112-1822.cpp)
add_executable(241112-16401 barkingdog/[0x12]Math/241112-16401.cpp)
add_executable(241112-2805 barkingdog/[0x12]Math/241112-2805.cpp)
add_executable(241114-18869 barkingdog/[0x12]Math/241114-18869.cpp)
add_executable(241119-2467 barkingdog/[0x12]Math/241119-2467.cpp)
add_executable(241119-3151 barkingdog/[0x12]Math/241119-3151.cpp)
add_executable(241121-14921 barkingdog/[0x12]Math/241121-14921.cpp)
add_executable(241121-1253 barkingdog/[0x12]Math/241121-1253.cpp)
add_executable(241201-2143 barkingdog/[0x12]Math/241201-2143.cpp)